# hedge-fund-13f-tracker

./: .clawdhublink  .env.example  .gitignore  Dockerfile  PRODUCT_SPEC.md  README.md  ROADMAP.md  SKILL.md  ZELDA_SKILL_GUIDE.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
config/: database.py  fund_registry.json  schema.sql
data/: sample_import.csv  schema.sql  seed_additional_funds.json  seed_data.json  tracker.db
data/sec_filings/: 0001167483_000091957426001143_13f.xml
scripts/: alert_engine.py  bulk_add_funds.py  bulk_ingest.py  dashboard.py  email_reporter.py  fetch_sec.py  hf-tracker  import_additional_holdings.py  ingest_filing.py  init_db.py  parse_13f.py  quarterly_13f_update.sh  telegram_bot.py  whalewisdom.py
src/cli/: main.py
src/db/: queries.py
src/models/: fund.py
tests/: test_basic.py  test_cli.py  test_comprehensive.py
